--- a/life_expectancy_gdp.ipynb
+++ b/life_expectancy_gdp.ipynb
@@ -1,10 +1,34 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "### Life Expectancy and GDP Python Project\n",
+    "#### by Albert Cort Banke\n",
+    "<div>\n",
+    "<img src=\"https://upload.wikimedia.org/wikipedia/commons/thumb/2/26/World_Health_Organization_Logo.svg/1280px-World_Health_Organization_Logo.svg.png\" width=\"500\"/>\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. Project scope\n",
+    "\n",
+    "Goal: To draw insights from the dataset included and illustrate interesting features with visualizations and summary statistics\n",
+    "Data: Data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
