--- a/life_expectancy_gdp.ipynb
+++ b/life_expectancy_gdp.ipynb
@@ -7,7 +7,7 @@
     "### Life Expectancy and GDP Python Project\n",
     "#### by Albert Cort Banke\n",
     "<div>\n",
-    "<img src=\"https://upload.wikimedia.org/wikipedia/commons/thumb/2/26/World_Health_Organization_Logo.svg/1280px-World_Health_Organization_Logo.svg.png\" width=\"500\"/>\n",
+    "<img src=\"https://upload.wikimedia.org/wikipedia/commons/thumb/2/26/World_Health_Organization_Logo.svg/1280px-World_Health_Organization_Logo.svg.png\" width=\"400\"/>\n",
     "</div>"
    ]
   },
@@ -15,20 +15,68 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. Project scope\n",
+    "Project scope\n",
     "\n",
-    "Goal: To draw insights from the dataset included and illustrate interesting features with visualizations and summary statistics\n",
-    "Data: Data"
+    "**Goal**: To draw insights from the dataset included and illustrate interesting features with visualizations and summary statistics\n",
+    "\n",
+    "**Data**: The data stems from and is provided by WHO, thus the findings will be published at their website\n",
+    "\n",
+    "**Analysis**: "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "1. Preparation\n",
+    "\n",
+    "Import the relevant libraries (A) and import and read the data (B)"
+   ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "# (A)\n",
+    "from matplotlib import pyplot as plt\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import seaborn as sns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  Country  Year  Life expectancy at birth (years)           GDP\n",
+      "0   Chile  2000                              77.3  7.786093e+10\n",
+      "1   Chile  2001                              77.3  7.097992e+10\n",
+      "2   Chile  2002                              77.8  6.973681e+10\n",
+      "3   Chile  2003                              77.9  7.564346e+10\n",
+      "4   Chile  2004                              78.0  9.921039e+10\n"
+     ]
+    }
+   ],
+   "source": [
+    "# (B)\n",
+    "df = pd.read_csv('all_data.csv')\n",
+    "\n",
+    "# print the first few observations to check the data has been imported correctly\n",
+    "print(df.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
@@ -48,7 +96,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
