--- a/life_expectancy_gdp.ipynb
+++ b/life_expectancy_gdp.ipynb
@@ -240,7 +240,55 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3. Exploratory Data Analysis"
+    "3. Exploratory Data Analysis\n",
+    "\n",
+    "This section consists of two parts. The first is a summary (E) of the statistical aspects of the data. The second is visualization (F) module, which consists of univariate, bivariate, and multivariate analysis.  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              year  life_expectancy_yrs      gdp_usdb\n",
+      "count    96.000000            96.000000     96.000000\n",
+      "mean   2007.500000            72.789583   3880.498571\n",
+      "std       4.633971            10.672882   5197.561311\n",
+      "min    2000.000000            44.300000      4.415703\n",
+      "25%    2003.750000            74.475000    173.301750\n",
+      "50%    2007.500000            76.750000   1280.220000\n",
+      "75%    2011.250000            78.900000   4067.510000\n",
+      "max    2015.000000            81.000000  18100.000000\n"
+     ]
+    }
+   ],
+   "source": [
+    "# (E) Summary statistics with Pandas .describe() function\n",
+    "\n",
+    "print(df.describe())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Interpretation of the statistics\n",
+    "\n",
+    "***Year***: The first instance of the data is in year 2000 while the last is in 2015\n",
+    "As this is a time series dataset, the significance of the year attribute is its non-missing status. Furthermore we see the instances are entered in the same way\n",
+    "\n",
+    "***Life_expectancy_yrs***: The max expectancy is 81 years while the minimum age is 44.3. This implies that the range in this attribute is significant \n",
+    "The mean is 72.78 years. In other words, the mean is quite high and close to the max value. \n",
+    "This could indicate that many of the countries sampled are modernerized\n",
+    "\n",
+    "***GDP***: The highest GDP in a year is 18100 billion USD. Meanwhile the lowest in a year is 4.4 billion USD. A strong distance between the two values\n",
+    "The mean GDP is 3880 billion usd. Having such high values implies that the interquartile range will be far from each other. In other words, there will be outliers\n",
+    "\n",
+    "Note how the country variable is not represented in the summary table. This is because the variable is categorical and unfit for quantitative analysis"
    ]
   },
   {
