--- a/life_expectancy_gdp.ipynb
+++ b/life_expectancy_gdp.ipynb
@@ -278,14 +278,14 @@
    "source": [
     "Interpretation of the statistics\n",
     "\n",
-    "***Year***: The first instance of the data is in year 2000 while the last is in 2015\n",
-    "As this is a time series dataset, the significance of the year attribute is its non-missing status. Furthermore we see the instances are entered in the same way\n",
+    "***Year:*** The first instance of the data is in year 2000 while the last is in 2015\n",
+    "As this is a time series dataset, the significance of the year attribute is its non-missing status. Furthermore we see the instances are entered in the same way via the correct calculations in the summary table\n",
     "\n",
-    "***Life_expectancy_yrs***: The max expectancy is 81 years while the minimum age is 44.3. This implies that the range in this attribute is significant \n",
+    "***Life_expectancy_yrs:*** The max expectancy is 81 years while the minimum age is 44.3. This implies that the range in this attribute is significant \n",
     "The mean is 72.78 years. In other words, the mean is quite high and close to the max value. \n",
     "This could indicate that many of the countries sampled are modernerized\n",
     "\n",
-    "***GDP***: The highest GDP in a year is 18100 billion USD. Meanwhile the lowest in a year is 4.4 billion USD. A strong distance between the two values\n",
+    "***GDP:*** The highest GDP in a year is 18100 billion USD. Meanwhile the lowest in a year is 4.4 billion USD. A strong distance between the two values\n",
     "The mean GDP is 3880 billion usd. Having such high values implies that the interquartile range will be far from each other. In other words, there will be outliers\n",
     "\n",
     "Note how the country variable is not represented in the summary table. This is because the variable is categorical and unfit for quantitative analysis"
