--- a/life_expectancy_gdp.ipynb
+++ b/life_expectancy_gdp.ipynb
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -485,6 +485,7 @@
     "plt.show()\n",
     "plt.clf()\n",
     "\n",
+    "# Plotting pointplots to show the changes in the variables over time\n",
     "plt.figure(figsize = [16, 6])\n",
     "ax5 = sns.pointplot(data = df, x = 'year', y = 'gdp_usdb', hue = 'country')\n",
     "\n",
@@ -496,7 +497,12 @@
     "\n",
     "plt.show()\n",
     "plt.clf()\n",
-    "\n"
+    "\n",
+    "\n",
+    "# Interpretation: The first graph shows how the association between GDP and life expectancy is relatively linear. \n",
+    "# The second graph, the pointplot show how GDP has increased over time, but its harder to distinct for Zimbabwe and Chile. \n",
+    "# Meanwhile, China has tripled its GDP in the same period. USA has increased its GDP in the same period as well.\n",
+    "# Finally, the third graph show how Zimbabwe has increased its life expectancy with almost 20 years during the same period\n"
    ]
   },
   {
@@ -538,8 +544,18 @@
    "source": [
     "5. Conclusion\n",
     "\n",
-    "Chile, an important factor. High life expectancy, lower GDP. *Note to self, what does this mean, and what question could this lead to?"
+    "From the data and analaysis above two important features stand out. One is the fact that life expectancy has increased in the past years for all sampled countries. Some have experienced more growth than others. The same is true for GDP, however this is more hard to see from graphs as Zimbabwe and Chile's GDP is relatively small as compared to USA and China, for example. \n",
+    "\n",
+    "For WHO, the main conclusion should be that there are is linear relationship between life expectancy and GDP. This does not mean, that a high GDP ensures higher life expectancy. It implies that positive changes in GDP is reflected in the overall life expectancy as well. \n",
+    "\n",
+    "A great example is Chile having a small GDP but a high life expectancy. The main conclusion should be that a high life expectancy does not derive from GDP, but can be affected positive changes herein. The example here is Zimbabwe, where life expectancy has increased significantly during past years. *Note to self, what does this mean, and what question could this lead to?\n",
+    "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
